js/js.translator/testData/incremental/invalidation/friendDependencyWithCrossModuleInliner/main/test.4.kt
fun test(): Int {
    val v = PublicClassHeir()
    return v.foo() + v.bar + v.baz() + v.foo_inline() + v.bar_inline - 5
}
